2013-04-12  Mario Pulido <mario.pulido@artica.es>
	
	* godmode/users/configure_user.php,
	godmode/modules/manage_network_components_form_common.php,
        godmode/modules/manage_network_components_form_network.php,
        include/help/en/help_meta_access.php,
        include/help/es/help_meta_access.php: Added meta_access help in 
	user editor and module network creation.

	*godmode/modules/manage_network_components_form_network.php: Added 
	help tips in module network creation 

2013-04-12  Sancho Lerena <slerena@artica.es>

	* include/functions.php: Added a new function to detect
	when a string data is a snapshot or now (by counting 
	\n > 2).

	* operation/agentes/datos_agente.php: Removed duped
	column with datetime information on string data.

	* operation/agentes/estado_monitores.php: Using snapshot
	detect function. 

2013-04-12  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php: Optimize the event graphs
	queries that appear in tactican and agent view

	* extensions/net_tools.php
	extensions/ssh_gateway.php
	extensions/vnc_view.php: Fixing the network extensions in
	extensions manager

2013-04-11 Miguel de Dios <miguel.dedios@artica.es>

	* include/graphs/functions_flot.php,
	include/graphs/flot/pandora.flot.js,
	include/graphs/flot/excanvas.js: some fixes for to show the flots
	graphs in m$-IE9 and next versions.

2013-04-11  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css
	include/functions_ui.php
	operation/users/user_edit.php
	general/header.php: Fix some visual aspects and
	missed skins option in user editor deleted in last
	commits

	* images/input_filter.png
	images/input_pdf.png: Add new images to buttons

	* images/skin: Move whole skins folder
	to enterprise version

2013-04-11 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/groups/group_list.php, include/functions_groups.php:
	optimize the access to the groups in systems with a huge groups.
	