@@ -1,3 +1,8 @@
+2013-04-12  Sancho Lerena <slerena@artica.es>
+
+	* extensions/ssh_gateway.php: Implemented support to connect
+	Telnet/SSH on different ports than standard ones.
+
 2013-04-12  Mario Pulido <mario.pulido@artica.es>
 	
 	* godmode/users/configure_user.php,
